assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Playpen+Sans&display=swap");
/******* general styling **********/

html {
  box-sizing: border-box;
  font-size: 62.5%; /*1rem = 10px, 10px/16px = 62.5%*/
}
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

body {
  max-width: 100vw;
  background: url(../images/route-map.webp) no-repeat 100% 80%;
  background-size: cover;
  background-attachment: fixed;
  font-family: "Playpen Sans", cursive;
}

h1 {
  width: 100%;
  font-size: 8rem;
  text-align: center;
  padding: 3rem;
  color: white;
  background-color: rgba(0, 0, 0, 0.7);
  margin-bottom: 3rem;
}

.subhead {
  color: white;
  background-color: rgba(0, 0, 0, 0.7);
  padding: 2rem 2rem;
}

a {
  text-decoration: none;
}

.hov-effect:hover {
  text-decoration: underline;
  text-decoration-color: darkslategray;
  color: darkslategray;
}
/******* navbar  **********/

header {
  position: fixed;
  display: flex;
  justify-content: space-between;
  height: 10rem;
  background: darkslategray;
  top: 0;
  width: 100%;
  align-items: center;
  z-index: 99;
}

#logo {
  height: 9rem;
  width: 9rem;
}

#navlinks {
  display: flex;
}
#navlinks li a {
  text-decoration: none;
  color: white;
}

#navlinks li {
  list-style: none;
  padding-right: 1rem;
  font-size: 3rem;
}

#navlinks li a:hover {
  border-bottom: 2px solid black;
}

.active {
  border-bottom: 2px solid black;
}

main {
  margin-top: 10rem;
  max-width: 100vw;
}

/********** footer style ***********/
footer {
  display: flex;
  justify-content: space-evenly;
  background: darkslategray;
  margin-top: 3rem;
}
.footer-section {
  width: 33%;
  position: relative;
}

.footer-external {
  margin: 3rem 0rem;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.footer-external-imgs {
  max-width: 24%;
  width: 100%;
}

.footer-external-text {
  position: absolute;
  bottom: 0.5rem;
  font-size: 1.5rem;
  color: white;
}

.footer-external-imgs:hover ~ .footer-external-text {
  color: blue;
}

/* mobile nav  */

.container {
  max-width: 60%;
  width: 60%;
}

.mobile-navbar {
  width: 100%;
  position: absolute;
  top: 0;
  display: none;
}

.mobile-navbar .mobile-navbar-container li {
  list-style: none;
}

.mobile-navbar-container #header-checkbox {
  position: absolute;
  display: block;
  height: 32px;
  width: 32px;
  top: 25px;
  right: 25px;
  opacity: 0;
  z-index: 5;
}

.mobile-navbar-container .hamburger {
  position: absolute;
  font-size: 3rem;
  top: 25px;
  right: 25px;
  z-index: 2;
}

#mobile-navlinks-logo {
  margin: 3rem;
  height: 10rem;
  width: 10rem;
}
.mobile-navbar .mobile-navlinks {
  transform: translate(-150%);
  display: flex;
  flex-direction: column;
  align-items: center;
  transition: transform 0.5s ease-in-out;
  text-align: center;
  background-color: darkslategray;
}

.mobile-navbar-container .mobile-navlinks li {
  margin-bottom: 1.2rem;
  font-size: 1.5rem;
  font-weight: 500;
  margin: 5rem 0;
}

.mobile-navlinks li a {
  color: white;
}

.mobile-navbar-container input[type="checkbox"]:checked ~ .mobile-navlinks {
  transform: translateX(0);
}

/********** index page ***********/

.hero {
  width: 100%;
  height: 70vh;
  background: #ccc;
  margin: 0;
  padding: 0;
  position: relative;
}

.slide-show-container {
  height: 100%;
  width: 100%;
  max-width: 100%;
  position: relative;
  float: right;
}
/* CSS Styles for all slides */
.wrapper-one,
.wrapper-two,
.wrapper-three {
  background-color: #eee;
  background-repeat: no-repeat;
  height: 100%;
  width: 100%;
  position: absolute;
  background-position: center;
  background-size: cover;
  display: flex;
}

.wrapper-three {
  background-size: 100% 100%;
}

/* CSS Styles for each slide */

.wrapper-one {
  background-image: url("../images/st-nazaire-painting.webp");
}

.wrapper-two {
  background-image: url("../images/hms-campbeltown-hit-dock-2.webp");
  animation: slideTwoAnim 20s infinite;
}

.wrapper-three {
  background-image: url("../images/modification-to-campbeltown.webp");
  animation: slideThreeAnim 20s infinite;
}

/* Styles for the text */

.wrapper-text {
  position: relative;
  text-align: center;
  width: 100%;
  height: 100%;
}

.wrapper-text-inner {
  position: absolute;
  bottom: 0;
  right: 0;
  padding: 2rem;
  border-radius: 1rem;
  color: white;
  background: darkslategray;
}

/* Animations */
@keyframes slideTwoAnim {
  0% {
    opacity: 0;
  }
  17% {
    opacity: 0;
  }
  33% {
    opacity: 1;
  }
  50% {
    opacity: 1;
  }
  67% {
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}

@keyframes slideThreeAnim {
  0% {
    opacity: 0;
  }
  50% {
    opacity: 0;
  }
  67% {
    opacity: 1;
  }
  83% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

.hero-header-text {
  position: absolute;
  top: -4%;
  left: 0%;
  border: 2px solid darkslategray;
  background: darkslategray;
  color: white;
  padding: 2rem;
  font-size: 3rem;
  width: 100%;
  max-width: 100%;
  text-align: center;
}

.hero-down-arrow {
  position: absolute;
  bottom: 0%;
  left: 50%;
  font-size: 5rem;
  color: darkslategray;
}

/************ main content of index page *************/

.index-main {
  display: flex;
  flex-wrap: wrap;
}

.st-nazaire-main-content {
  width: 100vw;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  height: fit-content;
  margin: 3rem 10rem;
  padding: 5rem 7rem;
  color: white;
  background-color: rgba(0, 0, 0, 0.7);
}

.st-nazaire-main-content img {
  float: left;
  margin: 2rem;
}

.tirpitz,
.mapplan-detailed,
.memorial-closeup,
.memorial-fullsize {
  width: 30%;
}

.mock-up {
  float: none;
  width: 100%;
  margin: 2rem 0 !important;
  padding: 0rem 2rem;
}

.st-nazaire-main-content-header {
  margin: 3rem 0;
  font-size: 3rem;
}

.st-nazaire-main-content-text {
  text-align: justify;
  font-size: 2.5rem;
  padding: 0 2rem;
  margin-bottom: 2rem;
}
/* ... */

